2001-11-16  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm (_replace_special_chars_late): Finally agree to escape
	< and > (thanks to some more prodding from Hugh S Myers)

2000-10-10  Tim Jenness  <timj@jach.hawaii.edu>

	* pod2latex: Add strict and version number.  Add -h1level option.

2000-09-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Release 0.53 to CPAN

2000-08-20  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* LaTeX.pm (add_item): Fix problem with '* text' items

2000-08-20  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm (add_item): Handle long item strings (from  Mark
	A. Hershberger <mah@everybody.org>)
	(_replace_special_chars): Escape ~ (from Simon Cozens
	<simon@@cozens.net>)
	Escape | (thanks to Marcel Grunauer <marcel@codewerk.com>)
	Add support for E<verbar> and E<sol>

	
2000-05-15  Tim Jenness  <timj@jach.hawaii.edu>

	* V0.52 for CPAN release 

2000-05-09  Tim Jenness  <timj@jach.hawaii.edu>

	* pod2latex: Make sure that argument order is preserved.

2000-05-08  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm: Version 0.51

2000-05-05  Tim Jenness  <timj@jach.hawaii.edu>

	* pod2latex: Set INFILE name when using filehandle.

	* LaTeX.pm: Fix warning messages so that they correctly list file
	name and line number. Fix escaping of ^ and {}.

2000-03-30  Tim Jenness  <timj@jach.hawaii.edu>

	* LaTeX.pm: Version 0.50
